--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@
   text-align: right;
 }
 .stick-footer{
-  position: fixed;
+  z-index: 10;
+  position: absolute;
   bottom:0;
-  width:100%;
+  width:100%
 }
