--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,9 @@
   padding-right:15px;
   text-align: right;
 }
+#chat-page .am-grid-icon{
+  display: none;
+}
 .stick-footer{
   z-index: 10;
   position: absolute;
